[AM-106] Fixed FB widget not showing, tweak convention font size

--- a/app/assets/stylesheets/components/editor/_conventions.scss
+++ b/app/assets/stylesheets/components/editor/_conventions.scss
@@ -5,7 +5,7 @@
     td, th {
         box-sizing: border-box;
         width: 40%;
-        padding: 0.2em 0.6em;
+        padding: 0.3em 0.6em 0.4em;
     }
     th {
         background: #837E77;
@@ -26,7 +26,7 @@
         }
         &:nth-child(3) {
             font-family: monospace;
-            font-size: 0.8em;
+            font-size: 1rem;
         }
     }
     tr {
